# vord2wec

./: LICENSE  README.md  main.py  minimal_word2vec.py  practical_word2vec.py  pyproject.toml
