[project]
name = "vord2wec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[tool.poe.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "ty check"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]
