[project]
name = "vord2wec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]

[tool.poe.tasks]
lint = "ruff check"
format = "ruff format"
typecheck = "ty check"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]
